--- a/src/components/navLeft/index.less
+++ b/src/components/navLeft/index.less
@@ -9,3 +9,11 @@
         margin-right: 10px; 
     }
 }
+a{
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.65);
+  &:hover {
+    text-decoration:none;  /*超链接无下划线*/
+    color: #fff;
+  }
+}
