--- a/src/pages/infiniteScroll/index.less
+++ b/src/pages/infiniteScroll/index.less
@@ -1,6 +1,8 @@
+.list-wrap {
+  background-color: #fff;
+}
 .list-item {
   width: 100%;
-  height: 30px !important;
   line-height: 30px;
   text-align: center;
   background-color: #fff;
